--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,26 @@
         android:layout_height="wrap_content"
 
         android:onClick="saveText"
-        android:text="Сохранить файл"
+        android:text="Сохранить на SD"
         app:layout_constraintBottom_toTopOf="@id/text"
-        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editor" />
+
+    <Button
+        android:id="@+id/save_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:onClick="saveText1"
+        android:text="Сохранить"
+        app:layout_constraintBottom_toTopOf="@id/text"
+        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editor"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/text"
@@ -49,20 +63,41 @@
         android:layout_marginStart="41dp"
         android:layout_marginEnd="264dp"
         android:onClick="openText"
-        android:text="Открыть файл"
+        android:text="Открыть с SD"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text" />
+
+    <Button
+        android:id="@+id/open_textSD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="94dp"
+        android:onClick="openText1"
+        android:text="Открыть"
+        app:layout_constraintStart_toEndOf="@+id/open_text"
         app:layout_constraintTop_toBottomOf="@+id/text" />
 
     <Button
         android:id="@+id/open_text3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginBottom="5dp"
         android:onClick="openText"
         android:text="Открыть менеджер"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/open_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:onClick="openText"
+        android:text="Работа с файлами"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/open_text4"
@@ -72,12 +107,34 @@
         android:id="@+id/open_text4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="8dp"
         android:onClick="openText"
         android:text="Картинки"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/open_text" />
+
+    <Button
+        android:id="@+id/deleteSD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="2dp"
+        android:onClick="deleteFileSD"
+        android:text="Удалить с SD"
+        app:layout_constraintStart_toEndOf="@+id/open_text4"
+        app:layout_constraintTop_toBottomOf="@+id/open_textSD" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="2dp"
+        android:onClick="deleteFile"
+        android:text="Удалить"
+        app:layout_constraintStart_toEndOf="@+id/open_text2"
+        app:layout_constraintTop_toBottomOf="@+id/deleteSD" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
